Open sourcing Battle creatures

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,10 @@
 
 en:
   hello: "Hello world"
+  views:
+    pagination:
+      first: "First"
+      last: "Last"
+      previous: "Prev"
+      next: "Next"
+      truncate: "..."
